--- a/DevOps/builder/dockerfile
+++ b/DevOps/builder/dockerfile
@@ -1,10 +1,10 @@
 FROM mcr.microsoft.com/dotnet/sdk:7.0
-ARG bdd_host
-ARG bdd_pwd
-ARG keycloak_pwd
-ARG uri
+#ARG bdd_host
+#ARG bdd_pwd
+#ARG keycloak_pwd
+#ARG uri
 COPY . /src/myWebApp
-ENV ParkingContextConnectionString="Server=${bdd_host};Database=parcIndus;User Id=parcadmin;Password=${bdd_pwd};TrustServerCertificate=true;"
+#ENV ParkingContextConnectionString="Server=${bdd_host};Database=parcIndus;User Id=parcadmin;Password=${bdd_pwd};TrustServerCertificate=true;"
 ENV KeycloakPasswordUser=$keycloak_pwd
 ENV WebsiteUri=$uri
 RUN mkdir /app
