--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,11 +42,9 @@ create-image-builder:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
     script:
       # Build image builder
-    - "docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE \
-    --build-arg uri=$URI . \ "
+    - "docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE --build-arg uri=$URI --build-arg keycloak_pwd=$KEYCLOAK_PWD  . "
     #--build-arg bdd_host=$BDD_HOST \
     #--build-arg bdd_pwd=$BDD_PWD \
-    #--build-arg keycloak_pwd=$KEYCLOAK_PWD \
     # Push Image to docker
     - docker push $DOCKER_IMAGE
 
@@ -68,10 +66,9 @@ create-image-app:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
     # Build image runner
-    - "docker build -t $DOCKER_IMAGE -f DevOps/dockerfile \
-    --build-arg bdd_host=$BDD_HOST \
-    --build-arg bdd_pwd=$BDD_PWD \
-    --build-arg uri=$URI ."
+    - "docker build -t $DOCKER_IMAGE -f DevOps/dockerfile --build-arg uri=$URI . "
+    #--build-arg bdd_host=$BDD_HOST \
+    #--build-arg bdd_pwd=$BDD_PWD \
     # Push Image to docker
     - docker push $DOCKER_IMAGE
 
@@ -182,7 +179,7 @@ deploy-app:
     -l traefik.http.routers.$TRAEFIK_ROUTER.service=$TRAEFIK_ROUTER \
     -l traefik.http.routers.$TRAEFIK_ROUTER.tls=true \
     --env KeycloakPasswordUser=$KEYCLOAK_PWD \
-    --env  ParkingContextConnectionString=$CONNEXION_STRING \
+    --env ParkingContextConnectionString=$CONNEXION_STRING \
     --network=$DOCKER_NETWORK \
     --mount type=volume,src=$DOCKER_VOLUME,dst=/app \
     --name $DOCKER_CONTAINER_NAME_APP $DOCKER_IMAGE_APP "
