--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,9 +42,12 @@ create-image-builder:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
     script:
       # Build image builder
-    - "docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE --build-arg uri=$URI --build-arg keycloak_pwd=$KEYCLOAK_PWD  . "
-    #--build-arg bdd_host=$BDD_HOST \
-    #--build-arg bdd_pwd=$BDD_PWD \
+    - "docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE \
+    --build-arg uri=$URI \
+    --build-arg keycloak_pwd=$KEYCLOAK_PWD \
+    --build-arg bdd_host=$BDD_HOST \
+    --build-arg bdd_pwd=$BDD_PWD . "
+    #
     # Push Image to docker
     - docker push $DOCKER_IMAGE
 
