--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,6 @@ create-image-builder:
     --build-arg keycloak_pwd=$KEYCLOAK_PWD \
     --build-arg bdd_host=$BDD_HOST \
     --build-arg bdd_pwd=$BDD_PWD . "
-    #
     # Push Image to docker
     - docker push $DOCKER_IMAGE
 
@@ -164,6 +163,9 @@ deploy-app:
     TRAEFIK_URL: parking-$CI_COMMIT_REF_NAME.deploy.indus.aix.apsdigit.lan
     TRAEFIK_LABEL_HOST: 'traefik.http.routers.$TRAEFIK_ROUTER.rule=Host(`$TRAEFIK_URL`)'
     KEYCLOAK_PWD: $KC_PWD
+    BDD_HOST: $BDD_HOST
+    BDD_PWD: $BDD_PWD
+    CONNEXION_STRING: ParkingContextConnectionString="Server=${bdd_host};Database=parcIndus;User Id=parcadmin;Password=${bdd_pwd};TrustServerCertificate=true;"
     CI_DEBUG_TRACE: "true"
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
@@ -176,6 +178,7 @@ deploy-app:
     -l traefik.http.routers.$TRAEFIK_ROUTER.service=$TRAEFIK_ROUTER \
     -l traefik.http.routers.$TRAEFIK_ROUTER.tls=true \
     -e KeycloakPasswordUser=$KEYCLOAK_PWD \
+    -e $CONNEXION_STRING \
     --network=$DOCKER_NETWORK \
     --mount type=volume,src=$DOCKER_VOLUME,dst=/app \
     --name $DOCKER_CONTAINER_NAME_APP $DOCKER_IMAGE_APP "
