--- a/DevOps/builder/dockerfile
+++ b/DevOps/builder/dockerfile
@@ -5,7 +5,7 @@ ARG keycloak_pwd
 ARG uri
 COPY . /src/myWebApp
 ENV ParkingContextConnectionString="Server=${bdd_host};Database=parcIndus;User Id=parcadmin;Password=${bdd_pwd};TrustServerCertificate=true;"
-ENV KeycloakPasswordUser=$keycloak_pwd
+#ENV KeycloakPasswordUser=$keycloak_pwd
 ENV WebsiteUri=$uri
 RUN mkdir /app
 RUN mv /src/myWebApp/GestionPlacesParking/Settings/keycloak.Development.json /src/myWebApp/GestionPlacesParking/Settings/keycloak.Production.json 
