--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,66 +4,69 @@ stages:
   - deploy-bdd
   - deploy
 
+variables:
+  #Variables Globales connexion HARBOR
+  REGISTRY_USER: $HARBGOR_REGISTRY_USER
+  REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
+  REGISTRY_URL: harbor.indus.aix.apsdigit.lan
+  #Variables Globales pour tag différentes images du projet
+  DOCKER_IMAGE_SQL: harbor.indus.aix.apsdigit.lan/parcindus/mssqlparcindus:$CI_COMMIT_REF_NAME
+  DOCKER_IMAGE_BUILD: harbor.indus.aix.apsdigit.lan/parcindus/dotnetbuildparcindus:$CI_COMMIT_REF_NAME
+  DOCKER_IMAGE_APP: harbor.indus.aix.apsdigit.lan/parcindus/appparcindus:$CI_COMMIT_REF_NAME
+  #Variables Globales utilisé dans un ou plusieurs stage
+  KEYCLOAK_PWD: $KC_PWD
+  URI: "https://parking-$CI_COMMIT_REF_NAME.deploy.indus.aix.apsdigit.lan"
+  BDD_HOST: $BDD_HOST
+  BDD_PWD: $BDD_PWD
+  DOCKER_CONTAINER_NAME_SQL: mssqlparcindus_$CI_COMMIT_REF_NAME
+  DOCKER_CONTAINER_NAME_BUILD: buildparcindus_$CI_COMMIT_REF_NAME
+  DOCKER_CONTAINER_NAME_APP: parking_indus_$CI_COMMIT_REF_NAME
+  DOCKER_VOLUME_BDD: bddparcindus$CI_COMMIT_REF_NAME
+  DOCKER_VOLUME_APP: appparcindus$CI_COMMIT_REF_NAME
+  DOCKER_NETWORK: parcindus_$CI_COMMIT_REF_NAME
+  BBD_ADMIN_PWD: $BDD_ADMIN_PWD
+  TRAEFIK_ROUTER: parking_$CI_COMMIT_REF_NAME
+  TRAEFIK_URL: parking-$CI_COMMIT_REF_NAME.deploy.indus.aix.apsdigit.lan
+  TRAEFIK_LABEL_HOST: 'traefik.http.routers.$TRAEFIK_ROUTER.rule=Host(`$TRAEFIK_URL`)'
+  EULA: $ACCEPT
+  VERSION: $BDD_VERSION
+  CI_DEBUG_TRACE: "true"
+
 create-image-sql:
   stage: docker-images
   image: docker:20.10.16
   tags:
-    - docker
-  variables:
-    REGISTRY_USER: $HARBGOR_REGISTRY_USER
-    REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
-    REGISTRY_URL: harbor.indus.aix.apsdigit.lan
-    DOCKER_IMAGE: harbor.indus.aix.apsdigit.lan/parcindus/mssqlparcindus:$CI_COMMIT_REF_NAME
-    CI_DEBUG_TRACE: "true"
+    - docker  
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
     # Build Image mssqlcusto
-    - "docker build -t $DOCKER_IMAGE -f DevOps/mssql/dockerfile ."
+    - "docker build -t $DOCKER_IMAGE_SQL -f DevOps/mssql/dockerfile ."
     # Push Image to Harbor
-    - docker push $DOCKER_IMAGE
+    - docker push $DOCKER_IMAGE_SQL
 
 create-image-builder:
     stage: docker-images
     image: docker:20.10.16
     tags:
     - docker
-    variables:
-        REGISTRY_USER: $HARBGOR_REGISTRY_USER
-        REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
-        REGISTRY_URL: harbor.indus.aix.apsdigit.lan
-        DOCKER_IMAGE: harbor.indus.aix.apsdigit.lan/parcindus/dotnetbuildparcindus:$CI_COMMIT_REF_NAME
-        KEYCLOAK_PWD: $KC_PWD
-        URI: "https://parking-$CI_COMMIT_REF_NAME.deploy.indus.aix.apsdigit.lan"
-        BDD_HOST: $BDD_HOST
-        BDD_PWD: $BDD_PWD
-        CI_DEBUG_TRACE: "true"
     before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
     script:
       # Build image builder
-    - "docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE \
+    - "docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE_BUILD \
     --build-arg uri=$URI \
-    --build-arg keycloak_pwd=$KEYCLOAK_PWD \
     --build-arg bdd_host=$BDD_HOST \
     --build-arg bdd_pwd=$BDD_PWD . "
+    #--build-arg keycloak_pwd=$KEYCLOAK_PWD \
     # Push Image to docker
-    - docker push $DOCKER_IMAGE
+    - docker push $DOCKER_IMAGE_BUILD
 
 create-image-app:
   stage: docker-images
   image: docker:20.10.16
   tags:
     - docker
-  variables:
-      REGISTRY_USER: $HARBGOR_REGISTRY_USER
-      REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
-      REGISTRY_URL: harbor.indus.aix.apsdigit.lan
-      DOCKER_IMAGE: harbor.indus.aix.apsdigit.lan/parcindus/appparcindus:$CI_COMMIT_REF_NAME
-      BDD_HOST: $BDD_HOST
-      BDD_PWD: $BDD_PWD
-      URI: "https://parking-$CI_COMMIT_REF_NAME.deploy.indus.aix.apsdigit.lan"
-      CI_DEBUG_TRACE: "true"
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
@@ -81,21 +84,6 @@ deploy-BDD:
   image: docker:20.10.16
   tags:
     - docker
-  variables:
-    REGISTRY_USER: $HARBGOR_REGISTRY_USER
-    REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
-    REGISTRY_URL: harbor.indus.aix.apsdigit.lan
-    DOCKER_IMAGE_SQL: harbor.indus.aix.apsdigit.lan/parcindus/mssqlparcindus:$CI_COMMIT_REF_NAME
-    DOCKER_CONTAINER_NAME_SQL: mssqlparcindus_$CI_COMMIT_REF_NAME
-    DOCKER_CONTAINER_NAME_BUILD: buildparcindus_$CI_COMMIT_REF_NAME
-    DOCKER_CONTAINER_NAME_APP: parking_indus_$CI_COMMIT_REF_NAME
-    DOCKER_VOLUME: bddparcindus$CI_COMMIT_REF_NAME
-    DOCKER_APP_VOLUME: appparcindus$CI_COMMIT_REF_NAME
-    DOCKER_NETWORK: parcindus_$CI_COMMIT_REF_NAME
-    BBD_PWD: $BDD_PWD
-    EULA: $ACCEPT
-    VERSION: $BDD_VERSION
-    CI_DEBUG_TRACE: "true"
   # To know how this is working : https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#use-the-docker-executor-with-docker-socket-binding
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
@@ -114,7 +102,7 @@ deploy-BDD:
     # First run the back, with little sleep after it to let it some time
     - "docker run -d --rm \
     --env ACCEPT_EULA=$EULA \
-    --env SA_PASSWORD=$BDD_PWD \
+    --env SA_PASSWORD=$BDD_ADMIN_PWD \
     --env MSSQL_PID=$BDD_VERSION \
     --mount type=volume,src=$DOCKER_VOLUME,dst=/var/opt/mssql/data \
     --network=$DOCKER_NETWORK \
@@ -125,15 +113,6 @@ deploy-Builder:
   image: docker:20.10.16
   tags:
     - docker
-  variables:
-    REGISTRY_USER: $HARBGOR_REGISTRY_USER
-    REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
-    REGISTRY_URL: harbor.indus.aix.apsdigit.lan
-    DOCKER_IMAGE_BUILD: harbor.indus.aix.apsdigit.lan/parcindus/dotnetbuildparcindus:$CI_COMMIT_REF_NAME
-    DOCKER_CONTAINER_NAME_BUILD: buildparcindus_$CI_COMMIT_REF_NAME
-    DOCKER_VOLUME: appparcindus$CI_COMMIT_REF_NAME
-    DOCKER_NETWORK: parcindus_$CI_COMMIT_REF_NAME
-    CI_DEBUG_TRACE: "true"
 # To know how this is working : https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#use-the-docker-executor-with-docker-socket-binding
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
@@ -145,25 +124,11 @@ deploy-Builder:
     --mount type=volume,src=$DOCKER_VOLUME,dst=/app \
     --network=$DOCKER_NETWORK \
     --name $DOCKER_CONTAINER_NAME_BUILD $DOCKER_IMAGE_BUILD "
-    #
 deploy-app:
   stage: deploy
   image: docker:20.10.16
   tags:
     - docker
-  variables:
-    REGISTRY_USER: $HARBGOR_REGISTRY_USER
-    REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
-    REGISTRY_URL: harbor.indus.aix.apsdigit.lan
-    DOCKER_CONTAINER_NAME_APP: parking_indus_$CI_COMMIT_REF_NAME
-    DOCKER_VOLUME: appparcindus$CI_COMMIT_REF_NAME
-    DOCKER_NETWORK: parcindus_$CI_COMMIT_REF_NAME
-    DOCKER_IMAGE_APP: harbor.indus.aix.apsdigit.lan/parcindus/appparcindus:$CI_COMMIT_REF_NAME
-    TRAEFIK_ROUTER: parking_$CI_COMMIT_REF_NAME
-    TRAEFIK_URL: parking-$CI_COMMIT_REF_NAME.deploy.indus.aix.apsdigit.lan
-    TRAEFIK_LABEL_HOST: 'traefik.http.routers.$TRAEFIK_ROUTER.rule=Host(`$TRAEFIK_URL`)'
-    KEYCLOAK_PWD: $KC_PWD
-    CI_DEBUG_TRACE: "true"
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
