--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -118,10 +118,10 @@ deploy-Builder:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
     # Create the volume APP
-    - docker volume create $DOCKER_VOLUME || true
+    - docker volume create $DOCKER_VOLUME_APP || true
     # RUN builder pour migrations de BDD & liaison dossier /app
     - "docker run -d \
-    --mount type=volume,src=$DOCKER_VOLUME,dst=/app \
+    --mount type=volume,src=$DOCKER_VOLUME_APP,dst=/app \
     --network=$DOCKER_NETWORK \
     --name $DOCKER_CONTAINER_NAME_BUILD $DOCKER_IMAGE_BUILD "
 deploy-app:
@@ -141,5 +141,5 @@ deploy-app:
     -l traefik.http.routers.$TRAEFIK_ROUTER.tls=true \
     --env KeycloakPasswordUser=$KEYCLOAK_PWD \
     --network=$DOCKER_NETWORK \
-    --mount type=volume,src=$DOCKER_VOLUME,dst=/app \
+    --mount type=volume,src=$DOCKER_VOLUME_APP,dst=/app \
     --name $DOCKER_CONTAINER_NAME_APP $DOCKER_IMAGE_APP "
