--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,29 +5,32 @@ stages:
   - deploy
 
 variables:
-  #Variables Globales connexion HARBOR
+  ##Variables Globales connexion HARBOR
   REGISTRY_USER: $HARBGOR_REGISTRY_USER
   REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
   REGISTRY_URL: harbor.indus.aix.apsdigit.lan
-  #Variables Globales pour tag différentes images du projet
+  ##Variables Globales pour tag différentes images du projet
   DOCKER_IMAGE_SQL: harbor.indus.aix.apsdigit.lan/parcindus/mssqlparcindus:$CI_COMMIT_REF_NAME
   DOCKER_IMAGE_BUILD: harbor.indus.aix.apsdigit.lan/parcindus/dotnetbuildparcindus:$CI_COMMIT_REF_NAME
   DOCKER_IMAGE_APP: harbor.indus.aix.apsdigit.lan/parcindus/appparcindus:$CI_COMMIT_REF_NAME
-  #Variables Globales utilisé dans un ou plusieurs stage
+  ##Variables Globales utilisé dans un ou plusieurs stage
   KEYCLOAK_PWD: $KC_PWD
   URI: "https://parking.deploy.indus.aix.apsdigit.lan"
   BDD_HOST: $BDD_HOST
   BDD_PWD: $BDD_PWD
+  #Variables pour les run docker
   DOCKER_CONTAINER_NAME_SQL: mssqlparcindus_$CI_COMMIT_REF_NAME
   DOCKER_CONTAINER_NAME_BUILD: buildparcindus_$CI_COMMIT_REF_NAME
   DOCKER_CONTAINER_NAME_APP: parking_indus_$CI_COMMIT_REF_NAME
   DOCKER_VOLUME_BDD: bddparcindus$CI_COMMIT_REF_NAME
   DOCKER_VOLUME_APP: appparcindus$CI_COMMIT_REF_NAME
   DOCKER_NETWORK: parcindus_$CI_COMMIT_REF_NAME
-  BBD_ADMIN_PWD: $BDD_ADMIN_PWD
+  ##Variables pour reverse proxy Traefik du conteneur de l'APP
   TRAEFIK_ROUTER: parking_$CI_COMMIT_REF_NAME
   TRAEFIK_URL: parking.deploy.indus.aix.apsdigit.lan
   TRAEFIK_LABEL_HOST: 'traefik.http.routers.$TRAEFIK_ROUTER.rule=Host(`$TRAEFIK_URL`)'
+  ##Variables de run du conteneur de BDD
+  BBD_ADMIN_PWD: $BDD_ADMIN_PWD
   EULA: $ACCEPT
   VERSION: $BDD_VERSION
   CI_DEBUG_TRACE: "true"
