--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,182 +1,152 @@
-# Made by Apside - 2023
 stages:
   - docker-images
   - deploy-bdd
   - deploy
 
+variables:
+  ##Variables Globales connexion HARBOR
+  REGISTRY_USER: $HARBGOR_REGISTRY_USER
+  REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
+  REGISTRY_URL: harbor.indus.aix.apsdigit.lan
+  ##Variables Globales pour tag différentes images du projet
+  DOCKER_IMAGE_SQL: harbor.indus.aix.apsdigit.lan/parcindus/mssqlparcindus:$CI_COMMIT_REF_NAME
+  DOCKER_IMAGE_BUILD: harbor.indus.aix.apsdigit.lan/parcindus/dotnetbuildparcindus:$CI_COMMIT_REF_NAME
+  DOCKER_IMAGE_APP: harbor.indus.aix.apsdigit.lan/parcindus/appparcindus:$CI_COMMIT_REF_NAME
+  ##Variables Globales utilisé dans un ou plusieurs stage
+  KEYCLOAK_PWD: $KC_PWD
+  URI: "https://parking.deploy.indus.aix.apsdigit.lan"
+  BDD_HOST: $BDD_HOST
+  BDD_PWD: $BDD_PWD
+  #Variables pour les run docker
+  DOCKER_CONTAINER_NAME_SQL: mssqlparcindus_$CI_COMMIT_REF_NAME
+  DOCKER_CONTAINER_NAME_BUILD: buildparcindus_$CI_COMMIT_REF_NAME
+  DOCKER_CONTAINER_NAME_APP: parking_indus_$CI_COMMIT_REF_NAME
+  DOCKER_VOLUME_BDD: bddparcindus$CI_COMMIT_REF_NAME
+  DOCKER_VOLUME_APP: appparcindus$CI_COMMIT_REF_NAME
+  DOCKER_NETWORK: parcindus_$CI_COMMIT_REF_NAME
+  ##Variables pour reverse proxy Traefik du conteneur de l'APP
+  TRAEFIK_ROUTER: parking_$CI_COMMIT_REF_NAME
+  TRAEFIK_URL: parking-$CI_COMMIT_REF_NAME.deploy.indus.aix.apsdigit.lan
+  TRAEFIK_LABEL_HOST: 'traefik.http.routers.$TRAEFIK_ROUTER.rule=Host(`$TRAEFIK_URL`)'
+  ##Variables de run du conteneur de BDD
+  BBD_ADMIN_PWD: $BDD_ADMIN_PWD
+  EULA: $ACCEPT
+  VERSION: $BDD_VERSION
+  CI_DEBUG_TRACE: "true"
+
 create-image-sql:
   stage: docker-images
   image: docker:20.10.16
   tags:
-    - docker
-  variables:
-    REGISTRY_USER: $HARBGOR_REGISTRY_USER
-    REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
-    REGISTRY_URL: harbor.indus.aix.apsdigit.lan
-    DOCKER_IMAGE: harbor.indus.aix.apsdigit.lan/parcindus/mssqlparcindus:$CI_COMMIT_REF_NAME
-    CI_DEBUG_TRACE: "true"
+    - docker  
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
     # Build Image mssqlcusto
-    - "docker build -t $DOCKER_IMAGE -f DevOps/mssql/dockerfile ."
+    - "docker build -t $DOCKER_IMAGE_SQL -f DevOps/mssql/dockerfile ."
     # Push Image to Harbor
-    - docker push $DOCKER_IMAGE
+    - docker push $DOCKER_IMAGE_SQL
 
 create-image-builder:
     stage: docker-images
     image: docker:20.10.16
     tags:
     - docker
-    variables:
-        REGISTRY_USER: $HARBGOR_REGISTRY_USER
-        REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
-        REGISTRY_URL: harbor.indus.aix.apsdigit.lan
-        DOCKER_IMAGE: harbor.indus.aix.apsdigit.lan/parcindus/dotnetbuildparcindus:$CI_COMMIT_REF_NAME
-        KEYCLOAK_PWD: $KC_PWD
-        URI: $WBURI
-        BDD_HOST: $BDD_HOST
-        BDD_PWD: $BDD_PWD
-        CI_DEBUG_TRACE: "true"
     before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
     script:
       # Build image builder
-    - echo "KEYCLOAK_PWD"
-    - "docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE \
+      # !! Important variables BDD_HOST&BB_PWD nécessaires pour var env connexion_string du container pour Build DLL&migration BDD
+    - "docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE_BUILD \
+    --build-arg uri=$URI \
     --build-arg bdd_host=$BDD_HOST \
-    --build-arg bdd_pwd=$BDD_PWD \
-    --build-arg keycloak_pwd=$KEYCLOAK_PWD \
-    --build-arg uri=$URI . "
+    --build-arg bdd_pwd=$BDD_PWD . "
     # Push Image to docker
-    - docker push $DOCKER_IMAGE
+    - docker push $DOCKER_IMAGE_BUILD
 
 create-image-app:
   stage: docker-images
   image: docker:20.10.16
   tags:
     - docker
-  variables:
-      REGISTRY_USER: $HARBGOR_REGISTRY_USER
-      REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
-      REGISTRY_URL: harbor.indus.aix.apsdigit.lan
-      DOCKER_IMAGE: harbor.indus.aix.apsdigit.lan/parcindus/appparcindus:$CI_COMMIT_REF_NAME
-      BDD_HOST: $BDD_HOST
-      BDD_PWD: $BDD_PWD
-      URI: $WBURI
-      CI_DEBUG_TRACE: "true"
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
-    # Build image runner
-    - "docker build -t $DOCKER_IMAGE -f DevOps/dockerfile \
+    # Build image runner !!
+    #Important variables BDD_HOST&BB_PWD nécessaires pour var env connexion_string du container pour execution de l'APP
+    - "docker build -f DevOps/dockerfile -t $DOCKER_IMAGE_APP \
     --build-arg bdd_host=$BDD_HOST \
     --build-arg bdd_pwd=$BDD_PWD \
-    --build-arg uri=$URI ."
+    --build-arg uri=$URI . " 
     # Push Image to docker
-    - docker push $DOCKER_IMAGE
+    - docker push $DOCKER_IMAGE_APP
 
-# séparation deploiement BDD car il faut attendre la fin du deploiement de la BDD/creation des DataBases avant de deployer Builder/Runner
+#séparation deploiement BDD car il faut attendre la fin du deploiement de la BDD/creation des DataBases avant de deployer Builder/Runner
 deploy-BDD:
   stage: deploy-bdd
   image: docker:20.10.16
   tags:
     - docker
-  variables:
-    REGISTRY_USER: $HARBGOR_REGISTRY_USER
-    REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
-    REGISTRY_URL: harbor.indus.aix.apsdigit.lan
-    DOCKER_IMAGE_SQL: harbor.indus.aix.apsdigit.lan/parcindus/mssqlparcindus:$CI_COMMIT_REF_NAME
-    DOCKER_CONTAINER_NAME_SQL: mssqlparcindus_$CI_COMMIT_REF_NAME
-    DOCKER_CONTAINER_NAME_BUILD: buildparcindus_$CI_COMMIT_REF_NAME
-    DOCKER_CONTAINER_NAME_APP: parking_indus_$CI_COMMIT_REF_NAME
-    DOCKER_VOLUME: bddparcindus$CI_COMMIT_REF_NAME
-    DOCKER_APP_VOLUME: appparcindus$CI_COMMIT_REF_NAME
-    DOCKER_NETWORK: parcindus
-    BBD_PWD: $BDD_PWD
-    EULA: $ACCEPT
-    VERSION: $BDD_VERSION
-    CI_DEBUG_TRACE: "true"
   # To know how this is working : https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#use-the-docker-executor-with-docker-socket-binding
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
-    # Stop the containers if it exists
+    # Stop and remove the container if it exists
     - docker stop $DOCKER_CONTAINER_NAME_SQL  || true
+    - docker rm $DOCKER_CONTAINER_NAME_SQL  || true
     - docker stop $DOCKER_CONTAINER_NAME_BUILD  || true
     - docker stop $DOCKER_CONTAINER_NAME_APP  || true
-    # Remove the containers, volume & network if it exists
-    - docker rm $DOCKER_CONTAINER_NAME_SQL  || true
-    - docker rm $DOCKER_CONTAINER_NAME_APP || true
-    - docker rm $DOCKER_CONTAINER_NAME_BUILD  || true
     - docker network rm $DOCKER_NETWORK || true
     - docker volume rm $DOCKER_APP_VOLUME || true
+    - docker rm $DOCKER_CONTAINER_NAME_APP || true
+    - docker rm $DOCKER_CONTAINER_NAME_BUILD  || true
     # Create the volumeBDD&network
-    - docker volume create $DOCKER_VOLUME || true
+    - docker volume create $DOCKER_VOLUME_BDD || true
     - docker network create $DOCKER_NETWORK || true
-    # Launch containerBDD  mssqlserver2017 express
-    - "docker run -d -p 1433:1433 \
+    # First run the back, with little sleep after it to let it some time
+    - "docker run -d --rm \
     --env ACCEPT_EULA=$EULA \
-    --env SA_PASSWORD=$BDD_PWD \
+    --env SA_PASSWORD=$BDD_ADMIN_PWD \
     --env MSSQL_PID=$BDD_VERSION \
-    --mount type=volume,src=$DOCKER_VOLUME,dst=/var/opt/mssql/data \
+    --mount type=volume,src=$DOCKER_VOLUME_BDD,dst=/var/opt/mssql/data \
     --network=$DOCKER_NETWORK \
     --name $DOCKER_CONTAINER_NAME_SQL $DOCKER_IMAGE_SQL "
     - sleep 60
+    
 deploy-Builder:
   stage: deploy
   image: docker:20.10.16
   tags:
     - docker
-  variables:
-    REGISTRY_USER: $HARBGOR_REGISTRY_USER
-    REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
-    REGISTRY_URL: harbor.indus.aix.apsdigit.lan
-    DOCKER_IMAGE_BUILD: harbor.indus.aix.apsdigit.lan/parcindus/dotnetbuildparcindus:$CI_COMMIT_REF_NAME
-    DOCKER_CONTAINER_NAME_BUILD: buildparcindus_$CI_COMMIT_REF_NAME
-    DOCKER_VOLUME: appparcindus$CI_COMMIT_REF_NAME
-    DOCKER_NETWORK: parcindus
-    CI_DEBUG_TRACE: "true"
 # To know how this is working : https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#use-the-docker-executor-with-docker-socket-binding
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
     # Create the volume APP
-    - docker volume create $DOCKER_VOLUME || true
+    - docker volume create $DOCKER_VOLUME_APP || true
     # RUN builder pour migrations de BDD & liaison dossier /app
     - "docker run -d --rm \
-    --mount type=volume,src=$DOCKER_VOLUME,dst=/app \
+    --mount type=volume,src=$DOCKER_VOLUME_APP,dst=/app \
     --network=$DOCKER_NETWORK \
     --name $DOCKER_CONTAINER_NAME_BUILD $DOCKER_IMAGE_BUILD "
+
 deploy-app:
   stage: deploy
   image: docker:20.10.16
   tags:
     - docker
-  variables:
-    REGISTRY_USER: $HARBGOR_REGISTRY_USER
-    REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
-    REGISTRY_URL: harbor.indus.aix.apsdigit.lan
-    DOCKER_CONTAINER_NAME_APP: parking_indus_$CI_COMMIT_REF_NAME
-    DOCKER_VOLUME: appparcindus$CI_COMMIT_REF_NAME
-    DOCKER_NETWORK: parcindus
-    DOCKER_IMAGE_APP: harbor.indus.aix.apsdigit.lan/parcindus/appparcindus:$CI_COMMIT_REF_NAME
-    TRAEFIK_LABEL_HOST: 'traefik.http.routers.parking.rule=Host(`parking.deploy.indus.aix.apsdigit.lan`)'
-    BDD_PWD: $BDD_PWD
-    BDD_HOST: $BDD_HOST
-    KEYCLOAK_PWD: $KC_PWD
-    CI_DEBUG_TRACE: "true"
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
     # Run APP
     - "docker run -d --rm \
-    -l traefik.http.services.parking.LoadBalancer.server.port=80 \
+    -l traefik.http.services.$TRAEFIK_ROUTER.LoadBalancer.server.port=80 \
     -l $TRAEFIK_LABEL_HOST \
-    -l traefik.http.routers.parking.entrypoints=http,https \
-    -l traefik.http.routers.parking.service=parking  \
-    -l traefik.http.routers.parking.tls=true \
+    -l traefik.http.routers.$TRAEFIK_ROUTER.entrypoints=http,https \
+    -l traefik.http.routers.$TRAEFIK_ROUTER.service=$TRAEFIK_ROUTER \
+    -l traefik.http.routers.$TRAEFIK_ROUTER.tls=true \
     --env KeycloakPasswordUser=$KEYCLOAK_PWD \
     --network=$DOCKER_NETWORK \
-    --mount type=volume,src=$DOCKER_VOLUME,dst=/app \
+    --mount type=volume,src=$DOCKER_VOLUME_APP,dst=/app \
     --name $DOCKER_CONTAINER_NAME_APP $DOCKER_IMAGE_APP "
+
