--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,22 +47,22 @@ create-image-sql:
     # Push Image to Harbor
     - docker push $DOCKER_IMAGE_SQL
 
-create-image-builder:
-    stage: docker-images
-    image: docker:20.10.16
-    tags:
-    - docker
-    before_script:
-    - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
-    script:
-      # Build image builder
-      # !! Important variables BDD_HOST&BB_PWD nécessaires pour var env connexion_string du container pour Build DLL&migration BDD
-    - "docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE_BUILD \
-    --build-arg uri=$URI \
-    --build-arg bdd_host=$BDD_HOST \
-    --build-arg bdd_pwd=$BDD_PWD . "
-    # Push Image to docker
-    - docker push $DOCKER_IMAGE_BUILD
+# create-image-builder:
+#     stage: docker-images
+#     image: docker:20.10.16
+#     tags:
+#     - docker
+#     before_script:
+#     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
+#     script:
+#       # Build image builder
+#       # !! Important variables BDD_HOST&BB_PWD nécessaires pour var env connexion_string du container pour Build DLL&migration BDD
+#     - "docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE_BUILD \
+#     --build-arg uri=$URI \
+#     --build-arg bdd_host=$BDD_HOST \
+#     --build-arg bdd_pwd=$BDD_PWD . "
+#     # Push Image to docker
+#     - docker push $DOCKER_IMAGE_BUILD
 
 create-image-app:
   stage: docker-images
@@ -113,22 +113,22 @@ deploy-BDD:
     --name $DOCKER_CONTAINER_NAME_SQL $DOCKER_IMAGE_SQL "
     - sleep 60
     
-deploy-Builder:
-  stage: deploy
-  image: docker:20.10.16
-  tags:
-    - docker
-# To know how this is working : https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#use-the-docker-executor-with-docker-socket-binding
-  before_script:
-    - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
-  script:
-    # Create the volume APP
-    - docker volume create $DOCKER_VOLUME_APP || true
-    # RUN builder pour migrations de BDD & liaison dossier /app
-    - "docker run -d --rm \
-    --mount type=volume,src=$DOCKER_VOLUME_APP,dst=/app \
-    --network=$DOCKER_NETWORK \
-    --name $DOCKER_CONTAINER_NAME_BUILD $DOCKER_IMAGE_BUILD "
+# deploy-Builder:
+#   stage: deploy
+#   image: docker:20.10.16
+#   tags:
+#     - docker
+# # To know how this is working : https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#use-the-docker-executor-with-docker-socket-binding
+#   before_script:
+#     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
+#   script:
+#     # Create the volume APP
+#     - docker volume create $DOCKER_VOLUME_APP || true
+#     # RUN builder pour migrations de BDD & liaison dossier /app
+#     - "docker run -d --rm \
+#     --mount type=volume,src=$DOCKER_VOLUME_APP,dst=/app \
+#     --network=$DOCKER_NETWORK \
+#     --name $DOCKER_CONTAINER_NAME_BUILD $DOCKER_IMAGE_BUILD "
 
 deploy-app:
   stage: deploy
