--- a/DevOps/dockerfile
+++ b/DevOps/dockerfile
@@ -9,6 +9,8 @@ ENV WebsiteUri=$uri
 RUN apt-get update
 RUN apt-get install -y wget
 RUN wget https://packages.microsoft.com/config/debian/11/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
+RUN dpkg -i packages-microsoft-prod.deb
+RUN rm packages-microsoft-prod.deb
 RUN apt-get update
 RUN apt-get install -y dotnet-sdk-7.0
 RUN mkdir /app
