--- a/DevOps/dockerfile
+++ b/DevOps/dockerfile
@@ -16,4 +16,4 @@ RUN mv /src/myWebApp/DevOps/builder/migration.sh /app/migration.sh
 RUN dotnet tool install -g dotnet-ef
 ENV PATH="$PATH:/root/.dotnet/tools"
 WORKDIR /app
-CMD  ["bash","migration.sh"]
+CMD  ["bash"]
