--- a/DevOps/dockerfile
+++ b/DevOps/dockerfile
@@ -2,8 +2,10 @@ FROM mcr.microsoft.com/dotnet/aspnet:7.0
 ARG bdd_host
 ARG bdd_pwd
 COPY . /src/myWebApp
+#Insertion variable environnement car pas executable lors du run
 ENV ParkingContextConnectionString="Server=${bdd_host};Database=parcIndus;User Id=parcadmin;Password=${bdd_pwd};TrustServerCertificate=true;" 
 RUN apt-get update
+#Install wget pour maj repo + install .net7.0:SDK
 RUN apt-get install -y wget
 RUN wget https://packages.microsoft.com/config/debian/11/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
 RUN dpkg -i packages-microsoft-prod.deb
