Refacto code HsitoryLocalRepository Correction Bug Duplication des réservations

--- a/GestionPlacesParking/GestionPlacesParking.Web.UI.csproj
+++ b/GestionPlacesParking/GestionPlacesParking.Web.UI.csproj
@@ -35,7 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Pages\Customs\HistoryV2.cshtml">
+    <Content Update="Pages\Customs\History.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
